--- a/docker-compose-pi.yaml
+++ b/docker-compose-pi.yaml
@@ -74,3 +74,4 @@ services:
         environment:
             FAUCET_CONFIG_STAT_RELOAD: '${FAUCET_CONFIG_STAT_RELOAD}'
             FAUCET_EVENT_SOCK: '${FAUCET_EVENT_SOCK}'
+            FAUCET_EVENT_SOCK_HEARTBEAT: '${FAUCET_EVENT_SOCK_HEARTBEAT}'
