--- a/debian/rules
+++ b/debian/rules
@@ -19,3 +19,6 @@ override_dh_auto_build:
 
 override_dh_auto_test:
 	dh_auto_test -- --system=custom --test-args='{interpreter} -m unittest discover tests/unit/faucet/ && {interpreter} -m unittest discover tests/unit/gauge/'
+
+override_dh_strip:
+	dh_strip --no-automatic-dbgsym
