--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,8 @@ script:
   - bin/test_stack
   - bin/build_proto
   - bin/package_forch
+env:
+  matrix:
+    - SHARD=1
+    - SHARD=2
+    - SHARD=3
