--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ script:
   - set -e
   - $TEST_SKIP bin/setup_stack local
   - bin/run_test_set
+after_script:
+  - sleep 20
 env:
   matrix:
     - TEST_SET=stack
