--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends: debhelper (>=9),
 	       python3-yaml,
 	       python3-prometheus-client,
 	       python3-requests,
+	       python3-faucet (=1.9.31),
 	       python3-psutil,
 	       python3-wheel,
 	       python3-protobuf,
