--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Build-Depends: debhelper (>=9),
 	       python3-protobuf,
 	       pylint,
 	       python3-pbr (>=1.9),
+Depends: python3-forch
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.6
 Homepage: https://github.com/faucetsdn/forch
@@ -22,11 +23,18 @@ Vcs-Browser: https://github.com/faucetsdn/forch
 
 Package: python3-forch
 Architecture: all
-Depends: python3-faucet (= 1.9.31.1),
+Depends: python3-faucet (= 1.9.31.2),
          python3-netaddr,
          python3-networkx,
          python3-protobuf,
          python3-psutil,
          python3-requests,
          python3-yaml,
+Suggests: forch
+Description: The Faucet Orchestrator for controlling and monitoring a faucet network.
+
+Package: forch
+Architecture: all
+Depends: python3-forch
+Suggests: forch
 Description: The Faucet Orchestrator for controlling and monitoring a faucet network.
