Restore setup_base debugging

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ addons:
   apt:
     update: true
 install:
-  #- set -e
+  - set -e
   - bin/setup_base
   - $TEST_SKIP bin/compile_ovs
   - $TEST_SKIP bin/build_docker ${DOCKER_BUILD:-pull}
