Cleanup autobuild version

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,13 @@ addons:
 install:
   - set -e
   - bin/setup_base
+  - bin/setup_faucet
   - $TEST_SKIP bin/compile_ovs
   - $TEST_SKIP bin/build_docker ${DOCKER_BUILD:-pull}
 script:
   - set -e
   - $TEST_SKIP bin/setup_stack local
   - bin/run_test_set
-after_script:
-  - sleep 20
 env:
   matrix:
     - TEST_SET=stack
