Use enable_stack_root by default

--- a/topo/bond/faucet.yaml
+++ b/topo/bond/faucet.yaml
@@ -102,4 +102,6 @@ dps:
 include: [uniform.yaml]
 version: 2
 vlans:
-  Faucet_IoT: {description: Faucet IoT, vid: 171}
+  171:
+    description: Faucet IoT
+    edge_learn_stack_root: true
