Create new test setup for device access test

--- a/.travis.yml
+++ b/.travis.yml
@@ -11,14 +11,15 @@ addons:
 install:
   - set -e
   - bin/setup_base
-  - $SKIP_INSTALL bin/compile_ovs
-  - $SKIP_INSTALL bin/build_docker ${DOCKER_BUILD:-pull}
+  - $TEST_SKIP bin/compile_ovs
+  - $TEST_SKIP bin/build_docker ${DOCKER_BUILD:-pull}
 script:
   - set -e
-  - $SKIP_STACK bin/setup_stack local $MODE
+  - $TEST_SKIP bin/setup_stack local $MODE
   - bin/run_test_set
 env:
   matrix:
     - TEST_SET=stack
     - TEST_SET=reconfig
-    - TEST_SET=topology SKIP_INSTALL=true MODE=dva
+    - TEST_SET=topology TEST_SKIP=true
+    - TEST_SET=access MODE=dva
