--- a/topo/bond/placement.yaml
+++ b/topo/bond/placement.yaml
@@ -1,23 +1,19 @@
 {
-    device_mac_placements:
-    {
-        "9a:02:57:1e:8f:01":
-        {
+    device_mac_placements:{
+        "9a:02:57:1e:8f:01":{
             switch: "nz-kiwi-t2sw1",
             port: 1,
-            connected: True,
+            connected: True
         },
-        "9a:02:57:1e:8f:02":
-        {
+        "9a:02:57:1e:8f:02":{
             switch: "nz-kiwi-t2sw2",
             port: 1,
-            connected: True,
+            connected: True
         },
-        "9a:02:57:1e:8f:03":
-        {
+        "9a:02:57:1e:8f:03":{
             switch: "nz-kiwi-t2sw3",
             port: 1,
-            connected: True,
-        },
+            connected: True
+        }
     }
 }
