--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -5,8 +5,11 @@ site:
     nz-kiwi-ctl1:
       fqdn: localhost.n
       port: 9020
-static_device_info:
+orchestration:
+    run_faucetizer: True
     static_device_placement: placement.yaml
+    static_device_behavior: behaviors_block-yellow.yaml
+    dynamic_config_file: faucet_dynamic.yaml
 radius_info:
     server_ip: 172.17.0.5
     server_port: 1812
