--- a/.pylintrc
+++ b/.pylintrc
@@ -7,4 +7,4 @@ ignored-classes=
     State, SystemState, CpnState, CpnConfig,
     FaucetEvent, ProcessState, DataplaneState, SwitchState,
     BuildingSchema, LacpState, AuthResult,
-    DevicesState, DevicePlacement, DeviceBehavior, MatchRule
+    DevicesState, DevicePlacement, DeviceBehavior, SegmentsToVlans
