--- a/topo/dva/devices_block-yellow.yaml
+++ b/topo/dva/devices_block-yellow.yaml
@@ -1,41 +1,23 @@
-{
-  device_mac_placements:
-    {
-      "9a:02:57:1e:8f:01":
-        {
-          switch: "nz-kiwi-t2sw1",
-          port: 1,
-          connected: True,
-        },
-      "9a:02:57:1e:8f:02":
-        {
-          switch: "nz-kiwi-t2sw2",
-          port: 1,
-          connected: True,
-        },
-      "9a:02:57:1e:8f:03":
-        {
-          switch: "nz-kiwi-t2sw3",
-          port: 1,
-          connected: True,
-        },
-    },
-  device_mac_behaviors:
-    {
-      "9a:02:57:1e:8f:01":
-        {
-          vid: 200,
-          role: "red",
-        },
-      "9a:02:57:1e:8f:02":
-        {
-          vid: 300,
-          role: "green",
-        },
-      "9a:02:57:1e:8f:03":
-        {
-          vid: 300,
-          role: "yellow"
-        }
-    }
-}
+device_mac_placements:
+    "9a:02:57:1e:8f:01":
+        switch: "nz-kiwi-t2sw1"
+        port: 1
+        connected: True
+    "9a:02:57:1e:8f:02":
+        switch: "nz-kiwi-t2sw2"
+        port: 1
+        connected: True
+    "9a:02:57:1e:8f:03":
+        switch: "nz-kiwi-t2sw3"
+        port: 1
+        connected: True
+device_mac_behaviors:
+    "9a:02:57:1e:8f:01":
+        segment: INFRA
+        role: "red"
+    "9a:02:57:1e:8f:02":
+        segment: BOS
+        role: "green"
+    "9a:02:57:1e:8f:03":
+        segment: BOS
+        role: "yellow"
