Enable access test

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ script:
 env:
   matrix:
     # Disabling b/c flaky, needs to be fixed and reinstated.
-    #- TEST_SET=access CONN_CHECK=skip-conn-check MODE=dva
+    - TEST_SET=access CONN_CHECK=skip-conn-check MODE=dva
     - TEST_SET=topology TEST_SKIP=true
     - TEST_SET=reconfig
     - TEST_SET=stack
