--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ install:
   - bin/setup_base
   - bin/setup_faucet
   - $TEST_SKIP bin/compile_ovs
-  - $TEST_SKIP bin/build_docker ${DOCKER_BUILD:-pull}
+  - $TEST_SKIP bin/retry_cmd bin/build_docker ${DOCKER_BUILD:-pull}
 script:
   - set -e
   - $TEST_SKIP bin/setup_stack local $CONN_CHECK $MODE
