--- a/topo/dva/faucet.yaml
+++ b/topo/dva/faucet.yaml
@@ -57,52 +57,52 @@ dps:
     hardware: Generic
     lacp_timeout: 5
     interfaces:
-      1: {description: IoT Device, native_vlan: 100}
-      2: {description: IoT Device, native_vlan: 100}
-      3: {description: IoT Device, native_vlan: 100}
-      4: {description: IoT Device, native_vlan: 100}
-      5: {description: IoT Device, native_vlan: 100}
-      6: {description: IoT Device, native_vlan: 100}
-      7: {description: IoT Device, native_vlan: 100}
-      8: {description: IoT Device, native_vlan: 100}
-      9: {description: IoT Device, native_vlan: 100}
-      10: {description: IoT Device, native_vlan: 100}
-      11: {description: IoT Device, native_vlan: 100}
-      12: {description: IoT Device, native_vlan: 100}
-      13: {description: IoT Device, native_vlan: 100}
-      14: {description: IoT Device, native_vlan: 100}
-      15: {description: IoT Device, native_vlan: 100}
-      16: {description: IoT Device, native_vlan: 100}
-      17: {description: IoT Device, native_vlan: 100}
-      18: {description: IoT Device, native_vlan: 100}
-      19: {description: IoT Device, native_vlan: 100}
-      20: {description: IoT Device, native_vlan: 100}
-      21: {description: IoT Device, native_vlan: 100}
-      22: {description: IoT Device, native_vlan: 100}
-      23: {description: IoT Device, native_vlan: 100}
-      24: {description: IoT Device, native_vlan: 100}
-      25: {description: IoT Device, native_vlan: 100}
-      26: {description: IoT Device, native_vlan: 100}
-      27: {description: IoT Device, native_vlan: 100}
-      28: {description: IoT Device, native_vlan: 100}
-      29: {description: IoT Device, native_vlan: 100}
-      30: {description: IoT Device, native_vlan: 100}
-      31: {description: IoT Device, native_vlan: 100}
-      32: {description: IoT Device, native_vlan: 100}
-      33: {description: IoT Device, native_vlan: 100}
-      34: {description: IoT Device, native_vlan: 100}
-      35: {description: IoT Device, native_vlan: 100}
-      36: {description: IoT Device, native_vlan: 100}
-      37: {description: IoT Device, native_vlan: 100}
-      38: {description: IoT Device, native_vlan: 100}
-      39: {description: IoT Device, native_vlan: 100}
-      40: {description: IoT Device, native_vlan: 100}
-      41: {description: IoT Device, native_vlan: 100}
-      42: {description: IoT Device, native_vlan: 100}
-      43: {description: IoT Device, native_vlan: 100}
-      44: {description: IoT Device, native_vlan: 100}
-      45: {description: IoT Device, native_vlan: 100}
-      46: {description: IoT Device, native_vlan: 100}
+      1: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      2: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      3: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      4: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      5: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      6: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      7: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      8: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      9: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      10: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      11: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      12: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      13: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      14: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      15: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      16: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      17: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      18: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      19: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      20: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      21: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      22: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      23: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      24: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      25: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      26: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      27: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      28: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      29: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      30: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      31: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      32: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      33: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      34: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      35: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      36: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      37: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      38: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      39: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      40: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      41: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      42: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      43: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      44: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      45: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      46: {description: IoT Device, native_vlan: 100, max_hosts: 1}
       50:
         description: "to t1sw1 port 9"
         stack: {dp: nz-kiwi-t1sw1, port: 9}
@@ -116,52 +116,52 @@ dps:
     hardware: Allied-Telesis
     lacp_timeout: 5
     interfaces:
-      1: {description: IoT Device, native_vlan: 100}
-      2: {description: IoT Device, native_vlan: 100}
-      3: {description: IoT Device, native_vlan: 100}
-      4: {description: IoT Device, native_vlan: 100}
-      5: {description: IoT Device, native_vlan: 100}
-      6: {description: IoT Device, native_vlan: 100}
-      7: {description: IoT Device, native_vlan: 100}
-      8: {description: IoT Device, native_vlan: 100}
-      9: {description: IoT Device, native_vlan: 100}
-      10: {description: IoT Device, native_vlan: 100}
-      11: {description: IoT Device, native_vlan: 100}
-      12: {description: IoT Device, native_vlan: 100}
-      13: {description: IoT Device, native_vlan: 100}
-      14: {description: IoT Device, native_vlan: 100}
-      15: {description: IoT Device, native_vlan: 100}
-      16: {description: IoT Device, native_vlan: 100}
-      17: {description: IoT Device, native_vlan: 100}
-      18: {description: IoT Device, native_vlan: 100}
-      19: {description: IoT Device, native_vlan: 100}
-      20: {description: IoT Device, native_vlan: 100}
-      21: {description: IoT Device, native_vlan: 100}
-      22: {description: IoT Device, native_vlan: 100}
-      23: {description: IoT Device, native_vlan: 100}
-      24: {description: IoT Device, native_vlan: 100}
-      25: {description: IoT Device, native_vlan: 100}
-      26: {description: IoT Device, native_vlan: 100}
-      27: {description: IoT Device, native_vlan: 100}
-      28: {description: IoT Device, native_vlan: 100}
-      29: {description: IoT Device, native_vlan: 100}
-      30: {description: IoT Device, native_vlan: 100}
-      31: {description: IoT Device, native_vlan: 100}
-      32: {description: IoT Device, native_vlan: 100}
-      33: {description: IoT Device, native_vlan: 100}
-      34: {description: IoT Device, native_vlan: 100}
-      35: {description: IoT Device, native_vlan: 100}
-      36: {description: IoT Device, native_vlan: 100}
-      37: {description: IoT Device, native_vlan: 100}
-      38: {description: IoT Device, native_vlan: 100}
-      39: {description: IoT Device, native_vlan: 100}
-      40: {description: IoT Device, native_vlan: 100}
-      41: {description: IoT Device, native_vlan: 100}
-      42: {description: IoT Device, native_vlan: 100}
-      43: {description: IoT Device, native_vlan: 100}
-      44: {description: IoT Device, native_vlan: 100}
-      45: {description: IoT Device, native_vlan: 100}
-      46: {description: IoT Device, native_vlan: 100}
+      1: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      2: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      3: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      4: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      5: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      6: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      7: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      8: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      9: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      10: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      11: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      12: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      13: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      14: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      15: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      16: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      17: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      18: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      19: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      20: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      21: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      22: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      23: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      24: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      25: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      26: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      27: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      28: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      29: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      30: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      31: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      32: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      33: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      34: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      35: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      36: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      37: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      38: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      39: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      40: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      41: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      42: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      43: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      44: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      45: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      46: {description: IoT Device, native_vlan: 100, max_hosts: 1}
       50:
         description: "to t1sw1 port 10"
         stack: {dp: nz-kiwi-t1sw1, port: 10}
@@ -175,52 +175,52 @@ dps:
     hardware: Allied-Telesis
     lacp_timeout: 5
     interfaces:
-      1: {description: IoT Device, native_vlan: 100}
-      2: {description: IoT Device, native_vlan: 100}
-      3: {description: IoT Device, native_vlan: 100}
-      4: {description: IoT Device, native_vlan: 100}
-      5: {description: IoT Device, native_vlan: 100}
-      6: {description: IoT Device, native_vlan: 100}
-      7: {description: IoT Device, native_vlan: 100}
-      8: {description: IoT Device, native_vlan: 100}
-      9: {description: IoT Device, native_vlan: 100}
-      10: {description: IoT Device, native_vlan: 100}
-      11: {description: IoT Device, native_vlan: 100}
-      12: {description: IoT Device, native_vlan: 100}
-      13: {description: IoT Device, native_vlan: 100}
-      14: {description: IoT Device, native_vlan: 100}
-      15: {description: IoT Device, native_vlan: 100}
-      16: {description: IoT Device, native_vlan: 100}
-      17: {description: IoT Device, native_vlan: 100}
-      18: {description: IoT Device, native_vlan: 100}
-      19: {description: IoT Device, native_vlan: 100}
-      20: {description: IoT Device, native_vlan: 100}
-      21: {description: IoT Device, native_vlan: 100}
-      22: {description: IoT Device, native_vlan: 100}
-      23: {description: IoT Device, native_vlan: 100}
-      24: {description: IoT Device, native_vlan: 100}
-      25: {description: IoT Device, native_vlan: 100}
-      26: {description: IoT Device, native_vlan: 100}
-      27: {description: IoT Device, native_vlan: 100}
-      28: {description: IoT Device, native_vlan: 100}
-      29: {description: IoT Device, native_vlan: 100}
-      30: {description: IoT Device, native_vlan: 100}
-      31: {description: IoT Device, native_vlan: 100}
-      32: {description: IoT Device, native_vlan: 100}
-      33: {description: IoT Device, native_vlan: 100}
-      34: {description: IoT Device, native_vlan: 100}
-      35: {description: IoT Device, native_vlan: 100}
-      36: {description: IoT Device, native_vlan: 100}
-      37: {description: IoT Device, native_vlan: 100}
-      38: {description: IoT Device, native_vlan: 100}
-      39: {description: IoT Device, native_vlan: 100}
-      40: {description: IoT Device, native_vlan: 100}
-      41: {description: IoT Device, native_vlan: 100}
-      42: {description: IoT Device, native_vlan: 100}
-      43: {description: IoT Device, native_vlan: 100}
-      44: {description: IoT Device, native_vlan: 100}
-      45: {description: IoT Device, native_vlan: 100}
-      46: {description: IoT Device, native_vlan: 100}
+      1: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      2: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      3: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      4: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      5: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      6: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      7: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      8: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      9: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      10: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      11: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      12: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      13: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      14: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      15: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      16: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      17: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      18: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      19: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      20: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      21: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      22: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      23: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      24: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      25: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      26: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      27: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      28: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      29: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      30: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      31: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      32: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      33: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      34: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      35: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      36: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      37: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      38: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      39: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      40: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      41: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      42: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      43: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      44: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      45: {description: IoT Device, native_vlan: 100, max_hosts: 1}
+      46: {description: IoT Device, native_vlan: 100, max_hosts: 1}
       50:
         description: "to t1sw1 port 11"
         stack: {dp: nz-kiwi-t1sw1, port: 11}
