--- a/topo/dva/faucet_block-yellow.yaml
+++ b/topo/dva/faucet_block-yellow.yaml
@@ -85,141 +85,187 @@ dps:
         acls_in:
         - role_red
         description: IoT Device
+        max_hosts: 1
         native_vlan: 200
       2:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       3:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       4:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       5:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       6:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       7:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       8:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       9:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       10:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       11:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       12:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       13:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       14:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       15:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       16:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       17:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       18:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       19:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       20:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       21:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       22:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       23:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       24:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       25:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       26:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       27:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       28:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       29:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       30:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       31:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       32:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       33:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       34:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       35:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       36:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       37:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       38:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       39:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       40:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       41:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       42:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       43:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       44:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       45:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       46:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       50:
         description: to t1sw1 port 9
@@ -244,141 +290,187 @@ dps:
         acls_in:
         - role_green
         description: IoT Device
+        max_hosts: 1
         native_vlan: 300
       2:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       3:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       4:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       5:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       6:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       7:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       8:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       9:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       10:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       11:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       12:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       13:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       14:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       15:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       16:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       17:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       18:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       19:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       20:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       21:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       22:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       23:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       24:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       25:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       26:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       27:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       28:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       29:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       30:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       31:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       32:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       33:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       34:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       35:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       36:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       37:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       38:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       39:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       40:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       41:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       42:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       43:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       44:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       45:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       46:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       50:
         description: to t1sw1 port 10
@@ -403,141 +495,187 @@ dps:
         acls_in:
         - role_yellow
         description: IoT Device
+        max_hosts: 1
         native_vlan: 300
       2:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       3:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       4:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       5:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       6:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       7:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       8:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       9:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       10:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       11:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       12:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       13:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       14:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       15:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       16:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       17:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       18:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       19:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       20:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       21:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       22:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       23:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       24:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       25:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       26:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       27:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       28:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       29:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       30:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       31:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       32:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       33:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       34:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       35:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       36:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       37:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       38:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       39:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       40:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       41:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       42:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       43:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       44:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       45:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       46:
         description: IoT Device
+        max_hosts: 1
         native_vlan: 100
       50:
         description: to t1sw1 port 11
