--- a/radius_server/docker-compose.yaml
+++ b/radius_server/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         image: 'forch/freeradius:latest'
         network_mode: bridge
         volumes:
-            - "../etc/freeradius/users:/etc/freeradius/3.0/users:ro"
-            - "../etc/freeradius/certs:/etc/freeradius/3.0/certs"
-            - "../etc/freeradius/default/eap:/etc/freeradius/3.0/mods-enabled/eap:ro"
-            - "../etc/freeradius/clients.conf:/etc/freeradius/3.0/clients.conf:ro"
+            - "./freeradius/users:/etc/freeradius/3.0/users:ro"
+            - "./freeradius/certs:/etc/freeradius/3.0/certs"
+            - "./freeradius/default/eap:/etc/freeradius/3.0/mods-enabled/eap:ro"
+            - "./freeradius/clients.conf:/etc/freeradius/3.0/clients.conf:ro"
