Create forch binary using pbr

--- a/setup.cfg
+++ b/setup.cfg
@@ -19,7 +19,7 @@ packages =
 
 [entry_points]
 console_scripts =
-    forch = forch.__main__:main
+    forch = forch.__main__
 
 [pytype]
 python_version = 3.6
