--- a/topo/dva/forch.yaml
+++ b/topo/dva/forch.yaml
@@ -30,6 +30,6 @@ process:
     gauge:
       regex: python.*ryu-manager.*faucet\.gauge
     forch:
-      regex: ^python.*forch\.forchestrator
+      regex: ^python.*forch$
     sleep:
       regex: "sleep 50\\.3231"
