Tweaks to improve forch test stability

--- a/etc/Dockerfile.faucet
+++ b/etc/Dockerfile.faucet
@@ -11,6 +11,6 @@ RUN /faucet-src/docker/install-faucet.sh && rm -rf /faucet-src/.git
 # Check for target executable since installer doesn't error out properly.
 RUN which faucet
 
-COPY bin/faucet_go bin/
+COPY misc/faucet_go bin/
 
 CMD ["bin/faucet_go"]
