--- a/topo/dva/role-based-acls.yaml
+++ b/topo/dva/role-based-acls.yaml
@@ -1,21 +1,29 @@
 acls:
   role_red:
     - rule:
+        description: allow ICMP
         cookie: 5000
+        dl_type: 0x800      # IPv4
+        ip_proto: 1         # ICMP
         actions:
           allow: True
   role_green:
     - rule:
+        description: allow ICMP
         cookie: 6000
+        dl_type: 0x800      # IPv4
+        ip_proto: 1         # ICMP
         actions:
           allow: True
   role_blue:
     - rule:
+        description: allow all
         cookie: 7000
         actions:
           allow: True
   role_yellow:
     - rule:
+        description: deny ICMP
         cookie: 8000
         dl_type: 0x800      # IPv4
         ip_proto: 1         # ICMP
@@ -23,5 +31,6 @@ acls:
           allow: False
     - rule:
         cookie: 8001
+        description: allow all
         actions:
           allow: True
