Rever travis yaml change

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ addons:
   apt:
     update: true
 install:
+  - set -e
   - bin/setup_base
   - bin/setup_faucet
   - $SKIP_INSTALL bin/compile_ovs
   - $SKIP_INSTALL bin/retry_cmd bin/build_docker
 script:
+  - set -e
   - $SKIP_STACK bin/setup_stack local $CONN_CHECK $MODE
   - bin/run_test_set
 env:
