add PYBUILD_SYSTEM to resolve dpkg-buildpackage failure

--- a/esdn-faucet/debian/rules
+++ b/esdn-faucet/debian/rules
@@ -1,6 +1,7 @@
 #!/usr/bin/make -f
 
 export PYBUILD_NAME=esdn-faucet
+export PYBUILD_SYSTEM=distutils
 
 %:
 	dh $@  --with python3 --buildsystem=pybuild
