Alter python3 version
Change-Id: I96f184d6bf9ae9d781a60cea2b59c387bf94f5fa

--- a/debian/control
+++ b/debian/control
@@ -14,7 +14,6 @@ Build-Depends: debhelper (>= 9),
 	       python3-protobuf,
 	       pylint,
 	       python3-pbr (>= 1.9),
-Depends: python3-forch
 Standards-Version: 3.9.6
 X-Python3-Version: >= 3.7, << 3.8
 Homepage: https://github.com/faucetsdn/forch
@@ -31,7 +30,7 @@ Depends: python3-faucet (= FAUCET_VERSION),
          python3-psutil,
          python3-requests,
          python3-yaml,
-         python3:any (>= 3.7), python3:any (<< 3.8),
+         python3:any (>= 3.7~), python3:any (<< 3.8),
 Description: The Faucet Orchestrator for controlling and monitoring a faucet network.
 
 Package: forch
