--- a/topo/dva/uniform-acls.yaml
+++ b/topo/dva/uniform-acls.yaml
@@ -1,6 +1,7 @@
 acls:
   uniform_100:
     - rule:
+        description: allow DHCP
         dl_type: 0x0800
         ip_proto: 17
         ipv4_dst: 192.168.1.254
@@ -8,18 +9,22 @@ acls:
         actions:
            allow: True
     - rule:
+        description: deny all
         actions:
           allow: False
   uniform_200:
     - rule:
+        description: allow all
         actions:
           allow: True
   uniform_300:
     - rule:
+        description: allow all
         actions:
           allow: True
   uniform_400:
     - rule:
+        description: allow all
         actions:
           allow: False
 
