--- a/topo/dva/behaviors.yaml
+++ b/topo/dva/behaviors.yaml
@@ -3,5 +3,5 @@ device_mac_behaviors:
     segment: INFRA
     role: red
   "9a:02:57:1e:8f:02":
-    segment: INFRA
+    segment: BOS
     role: green
